proxmox-ve-config/tests/fabric/snapshots/fabric__ospf_multi_fabric_pve1.snap
---
source: proxmox-ve-config/tests/fabric/main.rs
expression: output
snapshot_kind: text
---
router ospf
 ospf router-id 192.168.1.9
exit
!
interface dummy_ceph
 ip ospf area 1
 ip ospf passive
exit
!
interface dummy_test
 ip ospf area 0
 ip ospf passive
exit
!
interface ens19
 ip ospf area 0
 ip ospf network point-to-point
exit
!
interface ens21
 ip ospf area 1
 ip ospf network point-to-point
exit
!
access-list pve_ospf_ceph_ips permit 192.168.1.0/24
!
access-list pve_ospf_test_ips permit 192.168.2.0/24
!
route-map pve_ospf permit 100
 match ip address pve_ospf_ceph_ips
 set src 192.168.1.9
exit
!
route-map pve_ospf permit 110
 match ip address pve_ospf_test_ips
 set src 192.168.2.9
exit
!
ip protocol ospf route-map pve_ospf
!
